--- a/solution/ZaMakeVoiceTable/ZaMakeVoiceTable.vcxproj
+++ b/solution/ZaMakeVoiceTable/ZaMakeVoiceTable.vcxproj
@@ -121,6 +121,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\src\ZaConst.h" />
+    <ClInclude Include="..\..\src\ZaIo.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
