修改配置文件
重新整理配置文件。语音文件的后缀支持多个

--- a/example/ZaVoiceConfig.ini
+++ b/example/ZaVoiceConfig.ini
@@ -1,4 +1,4 @@
-
+﻿
 #整体配置
 [General]
 #是否启用DEBUG级别的日志
@@ -14,8 +14,8 @@ UseLogFile = 0
 #默认值 ao.voice
 VoiceFileDirectory = ao.voice
 #语音文件后缀
-#默认值 wav
-VoiceFileExtension = wav
+#默认值 ogg wav
+VoiceFileExtension = ogg wav
 #语音表文件所在目录
 #默认值 ao.tbl
 VoiceTableFileDirectory = ao.tbl
@@ -30,8 +30,8 @@ DisableOriginalVoice = 0
 [Zero]
 #默认值 zero.voice
 VoiceFileDirectory = zero.voice
-#默认值 wav
-VoiceFileExtension = wav
+#默认值 ogg wav
+VoiceFileExtension = ogg wav
 #默认值 zero.voice
 VoiceTableFileDirectory = zero.tbl
 #默认值 tbl
