--- a/solution/ZeroAoVoiceTool/ZeroAoVoiceTool.vcxproj
+++ b/solution/ZeroAoVoiceTool/ZeroAoVoiceTool.vcxproj
@@ -75,6 +75,7 @@
     <ClCompile Include="..\..\src\ZaConfig.cpp" />
     <ClCompile Include="..\..\src\ZaLog.cpp" />
     <ClCompile Include="..\..\src\ZaRemote.cpp" />
+    <ClCompile Include="..\..\src\ZaScenaAnalyzer.cpp" />
     <ClCompile Include="..\..\src\ZaSound.cpp" />
     <ClCompile Include="..\..\src\ZaVoicePlayer.cpp" />
     <ClCompile Include="..\..\src\ZaVoiceTable.cpp" />
@@ -87,6 +88,7 @@
     <ClInclude Include="..\..\src\ZaLog.h" />
     <ClInclude Include="..\..\src\ZaRemote.h" />
     <ClInclude Include="..\..\src\ZaRemoteAsm.h" />
+    <ClInclude Include="..\..\src\ZaScenaAnalyzer.h" />
     <ClInclude Include="..\..\src\ZaSound.h" />
     <ClInclude Include="..\..\src\ZaVoicePlayer.h" />
     <ClInclude Include="..\..\src\ZaVoiceTable.h" />
