--- a/solution/ZeroAoVoiceToolX/ZeroAoVoiceToolX.vcxproj
+++ b/solution/ZeroAoVoiceToolX/ZeroAoVoiceToolX.vcxproj
@@ -44,6 +44,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">NotUsing</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="..\..\src\ZeroAoVoiceToolX\MainDlg.cpp" />
     <ClCompile Include="..\..\src\ZeroAoVoiceToolX\stdafx.cpp" />
     <ClCompile Include="..\..\src\ZeroAoVoiceToolX\ZeroAoVoiceToolX.cpp" />
   </ItemGroup>
@@ -104,7 +105,7 @@
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>WIN32;_WINDOWS;STRICT;_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;WIN32;_WINDOWS;STRICT;_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
