添加音量、自动开始的配置项

--- a/example/ZaVoiceConfig.ini
+++ b/example/ZaVoiceConfig.ini
@@ -7,6 +7,8 @@ OpenDebugLog = 0
 #是否将日志同时输出到文件
 #默认值 0
 UseLogFile = 0
+#自动开始。仅适用于ZeroAoVoiceToolX
+AutoStart = 0
 
 #碧之轨迹的配置
 [Ao]
@@ -25,6 +27,8 @@ VoiceTableFileExtension = tbl
 #禁止原本的剧情语音（不包括语气语音），仅对碧之轨迹有效
 #默认值 0
 DisableOriginalVoice = 0
+#音量，范围为0~100，默认为100（最大值）
+Volume = 100
 
 #零之轨迹的配置
 [Zero]
@@ -36,3 +40,5 @@ VoiceFileExtension = ogg wav
 VoiceTableFileDirectory = zero.tbl
 #默认值 tbl
 VoiceTableFileExtension = tbl
+#音量，范围为0~100，默认为100（最大值）
+Volume = 100
