重新完成remote及sound部分

--- a/solution/ZaBase/ZaBase.vcxproj
+++ b/solution/ZaBase/ZaBase.vcxproj
@@ -68,12 +68,17 @@
   <ItemGroup>
     <ClInclude Include="..\..\src\Za.h" />
     <ClInclude Include="..\..\src\ZaData.h" />
+    <ClInclude Include="..\..\src\ZaErrorMsg.h" />
     <ClInclude Include="..\..\src\ZaGameData.h" />
+    <ClInclude Include="..\..\src\ZaRemote.h" />
+    <ClInclude Include="..\..\src\ZaRemoteAsm.h" />
     <ClInclude Include="..\..\src\ZaSound.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\src\Za.cpp" />
+    <ClCompile Include="..\..\src\ZaErrorMsg.cpp" />
     <ClCompile Include="..\..\src\ZaGameData.cpp" />
+    <ClCompile Include="..\..\src\ZaRemote.cpp" />
     <ClCompile Include="..\..\src\ZaSound.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
