--- a/solution/ZeroAoVoiceTool/ZeroAoVoiceTool.vcxproj
+++ b/solution/ZeroAoVoiceTool/ZeroAoVoiceTool.vcxproj
@@ -112,6 +112,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\..\src\ZeroAoVoiceTool\AboutDlg.cpp" />
+    <ClCompile Include="..\..\src\ZeroAoVoiceTool\Config.cpp">
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
+    </ClCompile>
+    <ClCompile Include="..\..\src\ZeroAoVoiceTool\Log.cpp">
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
+    </ClCompile>
     <ClCompile Include="..\..\src\ZeroAoVoiceTool\MainDlg.cpp" />
     <ClCompile Include="..\..\src\ZeroAoVoiceTool\stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
@@ -121,6 +127,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\src\ZeroAoVoiceTool\AboutDlg.h" />
+    <ClInclude Include="..\..\src\ZeroAoVoiceTool\Config.h" />
+    <ClInclude Include="..\..\src\ZeroAoVoiceTool\Const.h" />
+    <ClInclude Include="..\..\src\ZeroAoVoiceTool\Log.h" />
     <ClInclude Include="..\..\src\ZeroAoVoiceTool\MainDlg.h" />
     <ClInclude Include="..\..\src\ZeroAoVoiceTool\resource.h" />
     <ClInclude Include="..\..\src\ZeroAoVoiceTool\stdafx.h" />
