--- a/solution/ZeroAoVoiceTool/ZeroAoVoiceTool.vcxproj
+++ b/solution/ZeroAoVoiceTool/ZeroAoVoiceTool.vcxproj
@@ -143,4 +143,9 @@
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
+  <ProjectExtensions>
+    <VisualStudio>
+      <UserProperties RESOURCE_FILE="\ZJ.Yang\Documents\GitHub\ZeroAoVoiceTool\src\ZeroAoVoiceTool\ZeroAoVoiceTool.rc" />
+    </VisualStudio>
+  </ProjectExtensions>
 </Project>
