完成全部控件的功能

--- a/solution/ZaBase/ZaBase.vcxproj
+++ b/solution/ZaBase/ZaBase.vcxproj
@@ -68,6 +68,7 @@
   <ItemGroup>
     <ClInclude Include="..\..\src\Za.h" />
     <ClInclude Include="..\..\src\ZaCommonMethod.h" />
+    <ClInclude Include="..\..\src\ZaConst.h" />
     <ClInclude Include="..\..\src\ZaData.h" />
     <ClInclude Include="..\..\src\ZaErrorMsg.h" />
     <ClInclude Include="..\..\src\ZaGameData.h" />
