--- a/solution/ZaBase/ZaBase.vcxproj.filters
+++ b/solution/ZaBase/ZaBase.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClInclude Include="..\..\src\ZaCommonMethod.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\src\ZaConst.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\src\Za.cpp">
