--- a/solution/ZeroAoVoiceTool/ZeroAoVoiceTool.vcxproj
+++ b/solution/ZeroAoVoiceTool/ZeroAoVoiceTool.vcxproj
@@ -26,6 +26,7 @@
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v140_xp</PlatformToolset>
     <CharacterSet>MultiByte</CharacterSet>
+    <WholeProgramOptimization>true</WholeProgramOptimization>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -85,13 +86,18 @@
       <PrecompiledHeader>Use</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
-      <ExceptionHandling />
+      <ExceptionHandling>Sync</ExceptionHandling>
       <DebugInformationFormat />
       <PreprocessorDefinitions>WIN32;_WINDOWS;STRICT;NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <IntrinsicFunctions>true</IntrinsicFunctions>
+      <FunctionLevelLinking>true</FunctionLevelLinking>
+      <SDLCheck>true</SDLCheck>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <AdditionalDependencies>audiere.lib;ZaBase.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <OptimizeReferences>true</OptimizeReferences>
+      <EnableCOMDATFolding>true</EnableCOMDATFolding>
     </Link>
     <ResourceCompile>
       <Culture>0x0409</Culture>
@@ -111,12 +117,13 @@
     </Midl>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\src\ZeroAoVoiceTool\AboutDlg.cpp" />
     <ClCompile Include="..\..\src\ZeroAoVoiceTool\Config.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">NotUsing</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="..\..\src\ZeroAoVoiceTool\Log.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">NotUsing</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="..\..\src\ZeroAoVoiceTool\MainDlg.cpp" />
     <ClCompile Include="..\..\src\ZeroAoVoiceTool\stdafx.cpp">
@@ -126,7 +133,6 @@
     <ClCompile Include="..\..\src\ZeroAoVoiceTool\ZeroAoVoiceTool.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\src\ZeroAoVoiceTool\AboutDlg.h" />
     <ClInclude Include="..\..\src\ZeroAoVoiceTool\Config.h" />
     <ClInclude Include="..\..\src\ZeroAoVoiceTool\Const.h" />
     <ClInclude Include="..\..\src\ZeroAoVoiceTool\Log.h" />
